[package]
name = "ltp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
jsonrpsee = { version =  "0.24.3", features = ["server", "macros", "client"] }
lsp-types = "0.97.0"
notify = "6.1.1"
tokio = { version = "1.13.1", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["codec"] }
tree-sitter = "0.22.6"
